--- a/assets/css/src/_footer.scss
+++ b/assets/css/src/_footer.scss
@@ -1,5 +1,5 @@
 div.main {
-  height: 60vh;
+  height: 80vh;
   background: #bde5e7;
   border-radius: 0 0 100px 100px;
   transform: translateY(90px);
@@ -231,7 +231,7 @@ footer ul {
     position: relative;
   }
   #campus-log {
-    width: 30%;
+    width: 100%;
   }
   .title-news {
     // margin: auto;
